--- a/source/_posts/互联网安全架构设计-二.md
+++ b/source/_posts/互联网安全架构设计-二.md
@@ -24,3 +24,25 @@ categories: 架构设计
 ## 什么是幂等
     保证数据唯一性,不许有重复,可以防止表单重复提交
 ## 保证幂等解决方案
+    1.MVCC方案(乐观锁无锁机制)
+        多版本并发控制,该策略主要使用update with condition(更新带条件来防止)来保证多次外部请求调用对系统的影响是一致的。
+    在系统设计过程中,合理使用乐观锁,通过version 或者updateTime(timestamp)等其他条件,来做乐观锁的判断条件,这样保证更新操作
+    即使在并发情况下,也不会有太大问题。例如:
+        select * from tablename where condition= #condition# //取出要更新的对象,带有version
+        update tablename set name=#name# ,version=#version+1# where version=#version#
+        在更新的过程中利用version来防止其他操作对象并发更新,导致更新丢失。为了避免失败,需要一定的重试机制。
+    适用场景:
+    2.去重表
+        在插入数据的时候,插入去重表,利用数据库的唯一索引特性,保证唯一的逻辑。
+    3.悲观锁(阻塞式)
+        select for update ,整个执行过程中锁定该订单对应的记录。注意:这种在db读大于写的时候不要用
+    适用场景:写多读少
+    4.Token机制,防止页面重复提交(推荐)
+        业务要求:页面的数据只能被点击提交一次
+        发生原因:由于重复点击或者网络重发,或者Nginx重发等情况会导致数据被重复提交
+        解决办法:
+            集群环境:采用token+redis(redis单线程,处理需要排队)
+            单JVM环境:采用token+redis或者token+jvm内存
+            处理流程:
+            数据提交前要向服务申请token,token放到redis或者jvm内存,token设置有效时间,提交后后台校验token,同时删除token
+        生成新的token返回
